native/OVR_Audio.h

typedef int32_t ovrResult;
typedef enum 
{
   ovrError_AudioUnknown                                = 2000, 
   ovrError_AudioInvalidParam                           = 2001, 
   ovrError_AudioBadSampleRate                          = 2002, 
   ovrError_AudioMissingDLL                             = 2003, 
   ovrError_AudioBadAlignment                           = 2004, 
   ovrError_AudioUninitialized                          = 2005, 
   ovrError_AudioHRTFInitFailure                        = 2006, 
   ovrError_AudioBadVersion                             = 2007, 
   ovrError_AudioSymbolNotFound                         = 2008, 
   ovrError_SharedReverbDisabled                        = 2009, 
   ovrError_AudioNoAvailableAmbisonicInstance           = 2017,
   ovrError_AudioInternalEnd                            = 2099, 
} ovrAudioError;
typedef struct ovrPosef_ ovrPosef;
typedef struct ovrPoseStatef_ ovrPoseStatef;
typedef enum 
{
  ovrAudioSourceFlag_None                          = 0x0000,
  ovrAudioSourceFlag_WideBand_HINT                 = 0x0010, 
  ovrAudioSourceFlag_NarrowBand_HINT               = 0x0020, 
  ovrAudioSourceFlag_BassCompensation_DEPRECATED   = 0x0040, 
  ovrAudioSourceFlag_DirectTimeOfArrival           = 0x0080, 
  ovrAudioSourceFlag_ReflectionsDisabled           = 0x0100, 
  ovrAudioSourceFlag_DisableResampling_RESERVED    = 0x8000, 
} ovrAudioSourceFlag;
typedef enum 
{
  ovrAudioSourceAttenuationMode_None          = 0,      
  ovrAudioSourceAttenuationMode_Fixed         = 1,      
  ovrAudioSourceAttenuationMode_InverseSquare = 2,      
  ovrAudioSourceAttenuationMode_COUNT
} ovrAudioSourceAttenuationMode;
typedef enum
{
    ovrAudioEnable_None                     = 0,   
    ovrAudioEnable_SimpleRoomModeling       = 2,   
    ovrAudioEnable_LateReverberation        = 3,   
    ovrAudioEnable_RandomizeReverb          = 4,   
    ovrAudioEnable_PerSourceReverb          = 5,   
    ovrAudioEnable_COUNT
} ovrAudioEnable;
typedef enum 
{
  ovrAudioHRTFInterpolationMethod_Nearest,
  ovrAudioHRTFInterpolationMethod_SimpleTimeDomain,
  ovrAudioHRTFInterpolationMethod_MinPhaseTimeDomain,
  ovrAudioHRTFInterpolationMethod_PhaseTruncation,
  ovrAudioHRTFInterpolationMethod_PhaseLerp,
  ovrAudioHRTFInterpolationMethod_COUNT
} ovrAudioHRTFInterpolationMethod;
typedef enum
{
  ovrAudioSpatializationStatus_None      = 0x00,  
  ovrAudioSpatializationStatus_Finished  = 0x01,  
  ovrAudioSpatializationStatus_Working   = 0x02,  
} ovrAudioSpatializationStatus;
typedef enum
{
    ovrAudioHeadphones_None           = -1,  
    ovrAudioHeadphones_Rift           = 0,   
    ovrAudioHeadphones_Rift_INTERNAL0 = 1,   
    ovrAudioHeadphones_Rift_INTERNAL1 = 2,   
    ovrAudioHeadphones_Rift_INTERNAL2 = 3,   
    ovrAudioHeadphones_Rift_INTERNAL3 = 4,   
    ovrAudioHeadphones_Rift_INTERNAL4 = 5,   
    ovrAudioHeadphones_Custom         = 10,  
    ovrAudioHeadphones_COUNT
} ovrAudioHeadphones;
typedef enum
{
    ovrAudioPerformanceCounter_Spatialization            = 0,  
    ovrAudioPerformanceCounter_SharedReverb              = 1,  
    ovrAudioPerformanceCounter_HeadphoneCorrection       = 2,  
    ovrAudioPerformanceCounter_COUNT
} ovrAudioPerformanceCounter;
typedef enum 
{
    ovrAudioAmbisonicFormat_FuMa, 
    ovrAudioAmbisonicFormat_AmbiX 
} ovrAudioAmbisonicFormat;
typedef enum
{
    ovrAudioAmbisonicSpeakerLayout_FrontOnly           =  0, 
    ovrAudioAmbisonicSpeakerLayout_Octahedron          =  1, 
    ovrAudioAmbisonicSpeakerLayout_Cube                =  2, 
    ovrAudioAmbisonicSpeakerLayout_Icosahedron         =  3, 
    ovrAudioAmbisonicSpeakerLayout_Dodecahedron        =  4, 
    ovrAudioAmbisonicSpeakerLayout_20PointElectron     =  5, 
    ovrAudioAmbisonicSpeakerLayout_SphericalHarmonics  = -1, 
    ovrAudioAmbisonicSpeakerLayout_Mono                = -2  
} ovrAudioAmbisonicSpeakerLayout;
typedef struct ovrAudioSource_   ovrAudioSource;
typedef struct ovrAudioContext_ *ovrAudioContext;
typedef struct ovrAudioAmbisonicStream_ *ovrAudioAmbisonicStream;
typedef void *ovrAudioSpectrumAnalyzer;
OVRA_EXPORT const char *ovrAudio_GetVersion( int *Major, int *Minor, int *Patch );
OVRA_EXPORT float * ovrAudio_AllocSamples( int NumSamples );
OVRA_EXPORT void ovrAudio_FreeSamples( float *Samples );
OVRA_EXPORT ovrResult ovrAudio_GetTransformFromPose( const ovrPosef *Pose, 
                                                     float *Vx, float *Vy, float *Vz,
                                                     float *Pos );
typedef struct _ovrAudioContextConfig
{
  uint32_t   acc_Size;              
  uint32_t   acc_MaxNumSources;     
  uint32_t   acc_SampleRate;        
  uint32_t   acc_BufferLength;      
} ovrAudioContextConfiguration;
OVRA_EXPORT ovrResult ovrAudio_CreateContext( ovrAudioContext *pContext,
                                        const ovrAudioContextConfiguration *pConfig );
OVRA_EXPORT void ovrAudio_DestroyContext( ovrAudioContext Context );
OVRA_EXPORT ovrResult ovrAudio_Enable( ovrAudioContext Context, 
                                  ovrAudioEnable What, 
                                  int Enable );
OVRA_EXPORT ovrResult ovrAudio_SetAudioSourceFlags( ovrAudioContext Context, 
                                                    int Sound, 
                                                    uint32_t Flags );
OVRA_EXPORT ovrResult ovrAudio_SetAudioSourceAttenuationMode( ovrAudioContext Context, 
                                                              int Sound, 
                                                              ovrAudioSourceAttenuationMode Mode, 
                                                              float FixedScale );
OVRA_EXPORT ovrResult ovrAudio_SpatializeMonoSourceInterleaved( ovrAudioContext Context, 
                                                          int Sound, 
                                                          uint32_t *OutStatus, 
                                                          float *Dst, const float *Src );
OVRA_EXPORT ovrResult ovrAudio_SpatializeMonoSourceLR( ovrAudioContext Context, 
                                                 int Sound, 
                                                 uint32_t *OutStatus, 
                                                 float *DstLeft, float *DstRight, 
                                                 const float *Src );
OVRA_EXPORT ovrResult ovrAudio_SetHeadphoneModel( ovrAudioContext Context, 
                                            ovrAudioHeadphones Model,
                                            const float *ImpulseResponse, int NumSamples );
OVRA_EXPORT ovrResult ovrAudio_GetPerformanceCounter( ovrAudioContext Context, 
                                                      ovrAudioPerformanceCounter Counter, 
                                                      int64_t *Count, 
                                                      double *TimeMicroSeconds );