src/ovraudio/sys.rs

pub type __darwin_pthread_attr_t = _opaque_pthread_attr_t;
pub type __darwin_pthread_cond_t = _opaque_pthread_cond_t;
pub type __darwin_pthread_condattr_t = _opaque_pthread_condattr_t;
pub type __darwin_pthread_key_t = ::std::os::raw::c_ulong;
pub type __darwin_pthread_mutex_t = _opaque_pthread_mutex_t;
pub type __darwin_pthread_mutexattr_t = _opaque_pthread_mutexattr_t;
pub type __darwin_pthread_once_t = _opaque_pthread_once_t;
pub type __darwin_pthread_rwlock_t = _opaque_pthread_rwlock_t;
pub type __darwin_pthread_rwlockattr_t = _opaque_pthread_rwlockattr_t;
pub type __darwin_pthread_t = *mut _opaque_pthread_t;
pub type u_int8_t = ::std::os::raw::c_uchar;
pub type u_int16_t = ::std::os::raw::c_ushort;
pub type u_int32_t = ::std::os::raw::c_uint;
pub type u_int64_t = ::std::os::raw::c_ulonglong;
pub type register_t = i64;
pub type user_addr_t = u_int64_t;
pub type user_size_t = u_int64_t;
pub type user_ssize_t = i64;
pub type user_long_t = i64;
pub type user_ulong_t = u_int64_t;
pub type user_time_t = i64;
pub type user_off_t = i64;
pub type syscall_arg_t = u_int64_t;
pub type intmax_t = ::std::os::raw::c_long;
pub type uintmax_t = ::std::os::raw::c_ulong;
pub type ovrResult = i32;
#[repr(u32)]
/// Enumerates error codes that can be returned by OVRAudio
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioError {
    ovrError_AudioUnknown = 2000,
    ovrError_AudioInvalidParam = 2001,
    ovrError_AudioBadSampleRate = 2002,
    ovrError_AudioMissingDLL = 2003,
    ovrError_AudioBadAlignment = 2004,
    ovrError_AudioUninitialized = 2005,
    ovrError_AudioHRTFInitFailure = 2006,
    ovrError_AudioBadVersion = 2007,
    ovrError_AudioSymbolNotFound = 2008,
    ovrError_SharedReverbDisabled = 2009,
    ovrError_AudioNoAvailableAmbisonicInstance = 2017,
    ovrError_AudioInternalEnd = 2099,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ovrPosef_ {
    _unused: [u8; 0],
}
pub type ovrPosef = ovrPosef_;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ovrPoseStatef_ {
    _unused: [u8; 0],
}
pub type ovrPoseStatef = ovrPoseStatef_;
#[repr(u32)]
/// Audio source flags
///
/// \see ovrAudio_SetAudioSourceFlags
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioSourceFlag {
    ovrAudioSourceFlag_None = 0,
    ovrAudioSourceFlag_WideBand_HINT = 16,
    ovrAudioSourceFlag_NarrowBand_HINT = 32,
    ovrAudioSourceFlag_BassCompensation_DEPRECATED = 64,
    ovrAudioSourceFlag_DirectTimeOfArrival = 128,
    ovrAudioSourceFlag_ReflectionsDisabled = 256,
    ovrAudioSourceFlag_DisableResampling_RESERVED = 32768,
}
#[repr(u32)]
/// Audio source attenuation mode
///
/// \see ovrAudio_SetAudioSourceAttenuationMode
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioSourceAttenuationMode {
    ovrAudioSourceAttenuationMode_None = 0,
    ovrAudioSourceAttenuationMode_Fixed = 1,
    ovrAudioSourceAttenuationMode_InverseSquare = 2,
    ovrAudioSourceAttenuationMode_COUNT = 3,
}
#[repr(u32)]
/// Global boolean flags
///
/// \see ovrAudio_Enable
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioEnable {
    ovrAudioEnable_None = 0,
    ovrAudioEnable_SimpleRoomModeling = 2,
    ovrAudioEnable_LateReverberation = 3,
    ovrAudioEnable_RandomizeReverb = 4,
    ovrAudioEnable_PerSourceReverb = 5,
    ovrAudioEnable_COUNT = 6,
}
#[repr(u32)]
/// Internal use only
///
/// Internal use only
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioHRTFInterpolationMethod {
    ovrAudioHRTFInterpolationMethod_Nearest = 0,
    ovrAudioHRTFInterpolationMethod_SimpleTimeDomain = 1,
    ovrAudioHRTFInterpolationMethod_MinPhaseTimeDomain = 2,
    ovrAudioHRTFInterpolationMethod_PhaseTruncation = 3,
    ovrAudioHRTFInterpolationMethod_PhaseLerp = 4,
    ovrAudioHRTFInterpolationMethod_COUNT = 5,
}
#[repr(u32)]
/// Status mask returned by spatializer APIs
///
/// Mask returned from spatialization APIs consists of combination of these.
/// \see ovrAudio_SpatializeMonoSourceLR
/// \see ovrAudio_SpatializeMonoSourceInterleaved
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioSpatializationStatus {
    ovrAudioSpatializationStatus_None = 0,
    ovrAudioSpatializationStatus_Finished = 1,
    ovrAudioSpatializationStatus_Working = 2,
}
#[repr(i32)]
/// Headphone models used for correction
///
/// \see ovrAudio_SetHeadphoneModel.
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioHeadphones {
    ovrAudioHeadphones_None = -1,
    ovrAudioHeadphones_Rift = 0,
    ovrAudioHeadphones_Rift_INTERNAL0 = 1,
    ovrAudioHeadphones_Rift_INTERNAL1 = 2,
    ovrAudioHeadphones_Rift_INTERNAL2 = 3,
    ovrAudioHeadphones_Rift_INTERNAL3 = 4,
    ovrAudioHeadphones_Rift_INTERNAL4 = 5,
    ovrAudioHeadphones_Custom = 10,
    ovrAudioHeadphones_COUNT = 11,
}
#[repr(u32)]
/// Performance counter enumerants
///
/// \see ovrAudio_GetPerformanceCounter
/// \see ovrAudio_SetPerformanceCounter
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioPerformanceCounter {
    ovrAudioPerformanceCounter_Spatialization = 0,
    ovrAudioPerformanceCounter_SharedReverb = 1,
    ovrAudioPerformanceCounter_HeadphoneCorrection = 2,
    ovrAudioPerformanceCounter_COUNT = 3,
}
#[repr(u32)]
/// Ambisonic formats
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioAmbisonicFormat {
    ovrAudioAmbisonicFormat_FuMa = 0,
    ovrAudioAmbisonicFormat_AmbiX = 1,
}
#[repr(i32)]
/// Virtual speaker layouts for ambisonics
///
/// Provides a variety of virtual speaker layouts for ambisonic playback. The default is Spherical Harmonics which is a experimental approach that uses no virtual speakers at all and provides better externalization but can exhibit some artifacts with broadband content.
/// 
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ovrAudioAmbisonicSpeakerLayout {
    ovrAudioAmbisonicSpeakerLayout_FrontOnly = 0,
    ovrAudioAmbisonicSpeakerLayout_Octahedron = 1,
    ovrAudioAmbisonicSpeakerLayout_Cube = 2,
    ovrAudioAmbisonicSpeakerLayout_Icosahedron = 3,
    ovrAudioAmbisonicSpeakerLayout_Dodecahedron = 4,
    ovrAudioAmbisonicSpeakerLayout_20PointElectron = 5,
    ovrAudioAmbisonicSpeakerLayout_SphericalHarmonics = -1,
    ovrAudioAmbisonicSpeakerLayout_Mono = -2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ovrAudioSource_ {
    _unused: [u8; 0],
}
/// Opaque type definitions for audio source and context
pub type ovrAudioSource = ovrAudioSource_;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ovrAudioContext_ {
    _unused: [u8; 0],
}
pub type ovrAudioContext = *mut ovrAudioContext_;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ovrAudioAmbisonicStream_ {
    _unused: [u8; 0],
}
pub type ovrAudioAmbisonicStream = *mut ovrAudioAmbisonicStream_;
pub type ovrAudioSpectrumAnalyzer = *mut ::std::os::raw::c_void;
extern "C" {
    /// Return library's built version information.
///
/// Can be called any time.
/// \param[out] Major pointer to integer that accepts major version number
/// \param[out] Minor pointer to integer that accepts minor version number
/// \param[out] Patch pointer to integer that accepts patch version number
///
/// \return Returns a string with human readable build information
///
    pub fn ovrAudio_GetVersion(Major: *mut ::std::os::raw::c_int,
                               Minor: *mut ::std::os::raw::c_int,
                               Patch: *mut ::std::os::raw::c_int)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    /// Allocate properly aligned buffer to store samples.
///
/// Helper function that allocates 16-byte aligned sample data sufficient
/// for passing to the spatialization APIs.
///
/// \param NumSamples number of samples to allocate 
/// \return Returns pointer to 16-byte aligned float buffer, or NULL on failure
/// \see ovrAudio_FreeSamples
///
    pub fn ovrAudio_AllocSamples(NumSamples: ::std::os::raw::c_int)
     -> *mut f32;
}
extern "C" {
    /// Free previously allocated buffer
///
/// Helper function that frees 16-byte aligned sample data previously
/// allocated by ovrAudio_AllocSamples.
///
/// \param Samples pointer to buffer previously allocated by ovrAudio_AllocSamples
/// \see ovrAudio_AllocSamples
///
    pub fn ovrAudio_FreeSamples(Samples: *mut f32);
}
extern "C" {
    /// Retrieve a transformation from an ovrPosef.
///
/// \param Pose[in] pose to fetch transform from
/// \param Vx[out] buffer to store orientation vector X
/// \param Vy[out] buffer to store orientation vector Y
/// \param Vz[out] buffer to store orientation vector Z
/// \param Pos[out] buffer to store position
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_GetTransformFromPose(Pose: *const ovrPosef, Vx: *mut f32,
                                         Vy: *mut f32, Vz: *mut f32,
                                         Pos: *mut f32) -> ovrResult;
}
/// Audio context configuration structure
///
/// Passed to ovrAudio_CreateContext
///
/// \see ovrAudio_CreateContext
///
#[repr(C)]
#[derive(Debug, Copy)]
pub struct _ovrAudioContextConfig {
    ///< set to size of the struct
    pub acc_Size: u32,
    ///< maximum number of audio sources to support
    pub acc_MaxNumSources: u32,
    ///< sample rate (16000 to 48000, but 44100 and 48000 are recommended for best quality)
    pub acc_SampleRate: u32,
    ///< number of samples in mono input buffers passed to spatializer
    pub acc_BufferLength: u32,
}
#[test]
fn bindgen_test_layout__ovrAudioContextConfig() {
    assert_eq!(::std::mem::size_of::<_ovrAudioContextConfig>() , 16usize ,
               concat ! ( "Size of: " , stringify ! ( _ovrAudioContextConfig )
               ));
    assert_eq! (::std::mem::align_of::<_ovrAudioContextConfig>() , 4usize ,
                concat ! (
                "Alignment of " , stringify ! ( _ovrAudioContextConfig ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioContextConfig ) ) . acc_Size as
                * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( _ovrAudioContextConfig
                ) , "::" , stringify ! ( acc_Size ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioContextConfig ) ) .
                acc_MaxNumSources as * const _ as usize } , 4usize , concat !
                (
                "Alignment of field: " , stringify ! ( _ovrAudioContextConfig
                ) , "::" , stringify ! ( acc_MaxNumSources ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioContextConfig ) ) .
                acc_SampleRate as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( _ovrAudioContextConfig
                ) , "::" , stringify ! ( acc_SampleRate ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioContextConfig ) ) .
                acc_BufferLength as * const _ as usize } , 12usize , concat !
                (
                "Alignment of field: " , stringify ! ( _ovrAudioContextConfig
                ) , "::" , stringify ! ( acc_BufferLength ) ));
}
impl Clone for _ovrAudioContextConfig {
    fn clone(&self) -> Self { *self }
}
pub type ovrAudioContextConfiguration = _ovrAudioContextConfig;
extern "C" {
    /// Create an audio context for spatializing incoming sounds.
///
/// Creates an audio context with the given configuration.
///
/// \param pContext[out] pointer to store address of context.  NOTE: pointer must be pointing to NULL!
/// \param pConfig[in] pointer to configuration struct describing the desired context attributes
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudio_DestroyContext
/// \see ovrAudioContextConfiguration
///
    pub fn ovrAudio_CreateContext(pContext: *mut ovrAudioContext,
                                  pConfig:
                                      *const ovrAudioContextConfiguration)
     -> ovrResult;
}
